Fixed latitude longitude and speed
All the data, such as the accelorometer reading, gyroscope reading, speed, latitude and longitude is now also being saved into variables that will later be able to be sent to the Database.
Every 5 seconds the data updates for the user.

--- a/Aplikacija/app/src/main/res/layout/activity_main.xml
+++ b/Aplikacija/app/src/main/res/layout/activity_main.xml
@@ -160,24 +160,11 @@
         android:layout_marginTop="32dp"
         android:backgroundTint="#808080"
         android:text="@string/info"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/speed"
-        tools:ignore="TextContrastCheck" />
-
-    <Button
-        android:id="@+id/mapButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#808080"
-        android:text="@string/mapa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/infoButton"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/speed"
+        app:layout_constraintVertical_bias="0.19999999"
         tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
