Implemented flask server and sending/receiving data
You can now take a photo in app and it send it to flask server for face recognition

--- a/Aplikacija/app/src/main/res/layout/activity_photo.xml
+++ b/Aplikacija/app/src/main/res/layout/activity_photo.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -21,25 +22,23 @@
         android:id="@+id/btnTakePhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#808080"
         android:text="ZAJEMI SLIKO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/previewView" />
 
-    <!-- Continue button -->
-    <Button
-        android:id="@+id/btnContinue"
+    <TextView
+        android:id="@+id/retryTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#808080"
-        android:text="NADALJUJ"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="24dp"
+        android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto" />
+
+    <!-- Continue button -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
