App is now linked to server for the board
Toggle button sends over message for toggling board, and when the isRunning is true, the phone will now only send gps data to python server for data gathering

--- a/Aplikacija/app/src/main/res/layout/activity_info.xml
+++ b/Aplikacija/app/src/main/res/layout/activity_info.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="@string/avtorja"
+        android:text="@string/avtorji"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="@string/ale_lenko_in_luka_majer"
+        android:text="@string/ImenaAvtorjev"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
